@@ -4,6 +4,8 @@
 
 == rufus-doric - 0.1.2    not yet released
 
+- added property as an alias to h_accessor
+
 
 == rufus-doric - 0.1.1    released 2010/03/22
 
